tests/sksl/errors/ArrayInlinedIndexOutOfRange.glsl
### Compilation failed:

error: 6: index -1 out of range for 'int[3]'
error: 6: index 3 out of range for 'int[3]'
2 errors
